新增一个请求,用来获得动物的基本信息

--- a/src/main/resources/templates/test2.html
+++ b/src/main/resources/templates/test2.html
@@ -29,5 +29,6 @@
     <p th:case="admin">管理员</p>
     <p th:case="${role}">角色</p>
 </div>
+名字:<span th:text="${animal.name}"></span>
 </body>
 </html>
